2013-11-18 Dan Locks <dwlocks@zmanda.com>
	* example/Makefile.am: include new files in dist tarball
	* example/amandaclient-tcp.xml.in, example/amandaserver-tcp.xml.in:
	  smf manifests for solaris >= 10

2013-11-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/fileheader.c (parse_heredoc): print message to debug if
	  end of heredoc is not found.
	* server-src/amfetchdump.pl: Trap failure on XML::Simple::XMLin.

2013-11-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Fix pod.

2013-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c (delete_file): Fix typo.

2013-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c (delete_file): Check for no objects.
	* installcheck/Amanda_Device.pl: Use different bucket name for each
	  test.

2013-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm (USAGE BY TAPE): Add more space for the
	  Time.

2013-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Check for S3_ERROR_NoSuchBucket error.
	* device-src/s3.c: Do not free hdl->user_token twice.

2013-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Xfer.pl, installcheck/Installcheck/Mock.pm,
	  installcheck/amvault.pl: installcheck do not do indirect ndmp.

2013-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Use full_write instead of write.

2013-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check return value of fdopen,
	  fclose(dev_outf).
	* server-src/driver.c, server-src/planner.c: Check return value of
	  holding_file_get_dumpfile.

2013-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Archive.swg: amar_attr_add_data_fd return an off_t.

2013-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Use hash table instead of re-scanning a list.

2013-10-31  Jean-Louis Martineau <martineau@zmanda.com>